fix: freeway-commons audit fixes
- coercion: BigInteger saturation, float/char overflow guards, Optional targets
- json: concrete collection/Map targets, publicLookup fallback for JDK classes
- logging: LogConfig single generic reader, rotation flush ordering, atomic gzip,
  env-sweep gating, strict boolean parsing
- scoped: Defer failure caching (Error too), ScopedCache/Defer nesting contract
- bean: JDK boundary covers bootstrap packages, module-access contract javadoc
- validation: depth cap 100, Optional/Iterable/@Size support